--- a/home.html
+++ b/home.html
@@ -3,7 +3,12 @@
 			<link rel="stylesheet" href="home.css">
 	</head>
 	<body>
-		<section id="principal"
+		<section id="principal">
+		    <div id="topo">
+		      <div id="logo">
+			<img src="titulo.jpg">
+		      </div>
+		    </div>
 		</section>
 	</body>
 </html>
